added member service
